6613529: Avoid duplicate object creation within JDK packages
Avoid using constructors when unique values are not necessary

Reviewed-by: volk, igor, peterz